<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_one"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_two"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_three"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_four"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_five"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/ic_round_black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_16sdp"
                android:textColor="#000"
                android:textSize="@dimen/_13ssp"
                android:text="@string/line_six"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icBack"
                app:tint="@color/black"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/terms_condition"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnShare"
                app:layout_constraintStart_toEndOf="@id/icBack"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/btnShare"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_share_test"
                android:visibility="visible"
                app:tint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>